# MemberPort

./: .eslintignore  .eslintrc.js  .flake8  .gitignore  .gitlab-ci.yml  .yamllint.cf  Dockerfile  LICENSE  README.md  app.py  database.dia  db.sql  docker-compose.yml  package-lock.json  package.json  pyproject.toml  rabbitmq.conf  requirements.txt  tsconfig.json  webpack.config.js
app/: config.py  email.py  email_utils.py  logger.py  models.py
app/database/: convert-wiki-to-sql.py  setup.py
app/plugins/: plugin.py
app/queue/: celery.py  tasks.py
app/tasks/: celery.py  tasks.py
app/test/: runtests.py  web_testcase.py
app/web/: web_server.py
assets/sass/: geography-selection.scss  geography.scss  main.scss
frontend/ag-components/: checkbox-renderer.ts
frontend/entrypoints/: add-organization.ts  admin.ts  calendar.ts  edit-organization.ts  geography.ts  members.ts  organizations.ts  post.ts  roles.ts
frontend/sass/: main.scss
frontend/utils/: api.ts
ory-config/kratos/: bot.schema.json  identity.traits.schema.json  kratos.yml  kratos.yml.example  member.schema.json  new.member.jsonnet  new.membership.jsonnet
ory-config/oathkeeper/: access-rules.yml  oathkeeper.yml
static/css/: geography.css  profile.css
static/js/: api.js  button-renderer.js  checkbox-renderer.js  geography.js  profile.js  sign-up.js
templates/: base.html  integrity.html  main.html  member.html  menu.html  profile.html  recovery.html  setup.html  sidemenu.html  sign-in.html  sign-up.html  verify.html
templates/admin/: add-member.html  add-organization.html  admin.html  (+7 more)
(+103 files in other folders)
