[tool.poetry]
name = "member-port"
version = "0.1.0"
description = "Medlemshanteringssystem"
authors = ["Piratpartiet <info@piratpartiet.se>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.0.3"
asyncpg = "^0.20.1"
bcrypt = "^3.1.7"
pytz = "^2019.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
